padding fix for no horizontal scrollbar
git-svn-id: https://subversion.lib.virginia.edu/repos/prosody@355 a7c3d585-246a-4d0f-aa80-7a775a0b11e9

--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ button.prosody-note-button {
 
 #poem {
     width: 552px;
-    padding: 20px;
+    padding: 15px;
 }
 
 /* #poem span {
